force-app/main/default/objects/Giving_Summary__c/Giving_Summary__c.object-meta.xml
<CustomObject>
    <description>Used to generate annual statements for donors</description>
    <label>Giving Summary</label>
    <nameField>
        <displayFormat>Number-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giving Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>