force-app/main/default/objects/Giving_Summary__c/fields/CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberId__c</fullName>
    <description>This field is used to upsert giving summaries, ensuring that a Campaign Member only has one giving summary generated.</description>
    <externalId>true</externalId>
    <label>CampaignMemberId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>