force-app/main/default/objects/Giving_Summary__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <externalId>true</externalId>
    <label>ContentDocumentId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>