force-app/main/default/objects/Giving_Summary__c/fields/Last_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sent_Date__c</fullName>
    <label>Last Sent Date</label>
    <type>DateTime</type>
</CustomField>