force-app/main/default/objects/Giving_Summary__c/fields/Letter_Body__c.field-meta.xml
<CustomField>
    <fullName>Letter_Body__c</fullName>
    <label>Letter Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>