force-app/main/default/objects/Giving_Summary__c/fields/Scheduled_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Send_Date__c</fullName>
    <inlineHelpText>When assigned this Giving Summary will be sent to the related Contact at the specified date and time. Note: the Giving Summary must be set to &quot;Email&quot;</inlineHelpText>
    <label>Scheduled Send Date</label>
    <type>DateTime</type>
</CustomField>