force-app/main/default/objects/Giving_Summary__c/fields/Signature_User__c.field-meta.xml
<CustomField>
    <fullName>Signature_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assign a User who should be used to sign the letters</inlineHelpText>
    <label>Signature User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Giving_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>