force-app/main/default/objects/Giving_Summary__c/fields/Summary_End__c.field-meta.xml
<CustomField>
    <fullName>Summary_End__c</fullName>
    <label>Summary End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>