force-app/main/default/objects/Giving_Summary__c/fields/Summary_Start__c.field-meta.xml
<CustomField>
    <fullName>Summary_Start__c</fullName>
    <label>Summary Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>