force-app/main/default/objects/Giving_Summary__c/fields/Total_Number_of_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Gifts__c</fullName>
    <label>Total Number of Gifts</label>
    <summaryForeignKey>Giving_Summary_Gifts__c.Giving_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>