force-app/main/default/objects/Giving_Summary__c/fields/Total_Receiptable__c.field-meta.xml
<CustomField>
    <fullName>Total_Receiptable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Receiptable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>