force-app/main/default/objects/Giving_Summary__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Print&quot;</defaultValue>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
                <default>true</default>
                <label>Print</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Hand Deliver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>