force-app/main/default/objects/Giving_Summary__c/validationRules/End_Date_is_Less_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_is_Less_Than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Summary_End__c &lt; Summary_Start__c</errorConditionFormula>
    <errorDisplayField>Summary_End__c</errorDisplayField>
    <errorMessage>End Date cannot be less than Start Date</errorMessage>
</ValidationRule>