force-app/main/default/objects/Giving_Summary__c/validationRules/Start_Date_cannot_be_greater_than_End_Da.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_cannot_be_greater_than_End_Da</fullName>
    <active>true</active>
    <errorConditionFormula>Summary_Start__c &gt; Summary_End__c</errorConditionFormula>
    <errorDisplayField>Summary_Start__c</errorDisplayField>
    <errorMessage>Start Date cannot be greater than End Date</errorMessage>
</ValidationRule>