force-app/main/default/objects/Giving_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Campaign__c</columns>
    <columns>Total_Receiptable__c</columns>
    <columns>Total_Number_of_Gifts__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>