force-app/main/default/objects/Giving_Summary__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Campaign__c</columns>
    <columns>Total_Receiptable__c</columns>
    <columns>Total_Number_of_Gifts__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Draft,Reviewed,Delivered</value>
    </filters>
    <label>Errors</label>
</ListView>